gcc/testsuite/rust/rustc/ui/rfc-2457/crate_name_nonascii_forbidden-1.rs
#![feature(non_ascii_idents)]

extern crate ьаг; // { dg-error "" "" { target *-*-* } }

fn main() {}

